-changed conveyors to only set the direction of a resource when they hit the hit of it